--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,27 @@
         android:theme="@style/Theme.Exe3"
         tools:targetApi="31">
         <activity
-            android:name=".Register"
-            android:exported="false"
-            android:label="@string/title_activity_register"
-            android:theme="@style/Theme.Exe3" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Exe3">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Register"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.Exe3" />
+        <activity
+            android:name=".ListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Exe3" />
+        <activity
+            android:name=".Chats"
+            android:exported="false"
+            android:theme="@style/Theme.Exe3" />
     </application>
 
 </manifest>
