--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,11 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Exe3"
         tools:targetApi="31">
-        <activity
-            android:name=".Register"
-            android:exported="false"
-            android:label="@string/title_activity_register"
-            android:theme="@style/Theme.Exe3" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -28,6 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+        android:name=".Register"
+        android:exported="false"
+        android:label="@string/title_activity_register"
+        android:theme="@style/Theme.Exe3" />
+        <activity android:name=".ListActivity"
+            android:exported="false"
+            android:label="@string/chats"
+            android:theme="@style/Theme.Exe3"/>
     </application>
 
 </manifest>
