--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:theme="@style/Theme.Exe3"
         tools:targetApi="31">
         <activity
-            android:name=".Settings"
             android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -35,6 +34,7 @@
             android:name=".activity.Chats"
             android:exported="false"
             android:theme="@style/Theme.Exe3" />
+        <activity android:name=".Settings"/>
     </application>
 
 </manifest>
