--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Exe3"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
@@ -24,7 +24,6 @@
         <activity
             android:name=".activity.Register"
             android:exported="false"
-            android:label="@string/title_activity_register"
             android:theme="@style/Theme.Exe3" />
         <activity
             android:name=".activity.ListActivity"
@@ -35,10 +34,10 @@
             android:exported="false"
             android:theme="@style/Theme.Exe3" />
         <activity
-            android:name=".Adding"
+            android:name=".activity.Adding"
             android:exported="false"
             android:theme="@style/Theme.Exe3" />
-        <activity android:name=".Settings"/>
+        <activity android:name=".activity.Settings"/>
     </application>
 
 </manifest>
