--- a/Android/local.properties
+++ b/Android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 25 11:34:16 IDT 2023
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+#Sun Jun 25 18:35:38 IDT 2023
+sdk.dir=C\:\\Users\\liido\\AppData\\Local\\Android\\Sdk
