--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -16,11 +16,12 @@
 
     <application
         android:allowBackup="true"
+        android:label="CHATAPP"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/logo"
+        android:roundIcon="@mipmap/logo1"
         android:supportsRtl="true"
         android:theme="@style/Theme.Exe3"
         android:usesCleartextTraffic="true"
